# effable

./: DEVELOPMENT.md  LICENSE  README.md  cabal.project  effable.cabal  stack.yaml
.github/workflows/: ci.yml
assets/: readme-template.md
misc/: dev.project
scripts/: make-readme  test-tested-with
src/: Effable.hs
src/Data/: Effable.hs
test/doctests/: doctests.hs
